--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <nav>
             <ul>
                 <li><a href="#">Strona Główna</a></li>
+                <li><a href="#angielski-section">Angielski</a></li>
                 <li><a href="#">O Nas</a></li>
                 <li><a href="#">Cennik</a></li>
                 <li><a href="#">Kontakt</a></li>
@@ -128,7 +129,6 @@
         <div class="footer-column">
             <h3>Informacje</h3>
             <ul>
-                <li>Cennik</li>
                 <li>O nas</li>
             </ul>
         </div>
