--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
             </ul>
         </nav>
     </header>
-
     <main>
+
+        <section id="angielski-section">
+            <h2>Kurs Angielskiego</h2>
+            <p>Informacje o kursie pojawią się tutaj.</p>
+        </section>
+        
         <section id="hero">
             <div class="hero-content">
                 <h1>Ucz się języków razem z nami!</h1>
