--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <img src="logo.png" alt="Logo SpeakEdo" id="logo">
         <nav>
             <ul>
-                <li><a href="#">Strona Główna</a></li>
-                <li><a href="#angielski-section">Angielski</a></li>
+                <li><a href="index.html">Strona Główna</a></li>
+                <li><a href="angielski.html">Angielski</a></li>
                 <li><a href="#">O Nas</a></li>
                 <li><a href="#">Cennik</a></li>
                 <li><a href="#">Kontakt</a></li>
