--- a/angielski.html
+++ b/angielski.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kurs Angielskiego - SpeakEdo</title>
+    <title>Kurs Angielskiego - Plany - SpeakEdo</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link do Twojego pliku CSS -->
 </head>
 <body>
@@ -20,9 +20,49 @@
         </nav>
     </header>
 
-    <section id="angielski-section">
-        <h2>Kurs Angielskiego</h2>
-        <p>Informacje o kursie angielskiego pojawią się tutaj.</p>
+    <section id="pricing-plans">
+        <div class="plan">
+            <h3>Plan regularny</h3>
+            <p class="price">od 65,00 zł</p>
+            <p>za lekcję</p>
+            <button>Wypróbuj za darmo</button>
+            <ul>
+                <li>Stałe godziny zajęć</li>
+                <li>45 min lub 60 min</li>
+                <li>1 x w miesiącu</li>
+                <li>Tak (przy kursach regularnych po 4 msc. nauki)</li>
+                <li>Za cały kurs (możliwa płatność ratalna)</li>
+                <li>Ty i lektor</li>
+            </ul>
+        </div>
+        <div class="plan">
+            <h3>Plan miesięczny</h3>
+            <p class="price">od 99,00 zł</p>
+            <p>za lekcję</p>
+            <button>Wypróbuj za darmo</button>
+            <ul>
+                <li>Stałe godziny zajęć</li>
+                <li>45 min lub 60 min</li>
+                <li>1 x w miesiącu</li>
+                <li>Tak, w każdej chwili</li>
+                <li>Miesięcznie</li>
+                <li>Ty i lektor</li>
+            </ul>
+        </div>
+        <div class="plan">
+            <h3>Plan elastyczny</h3>
+            <p class="price">od 80,00 zł</p>
+            <p>za lekcję</p>
+            <button>Wypróbuj za darmo</button>
+            <ul>
+                <li>Ustalane na bieżąco lekcje</li>
+                <li>45 min lub 60 min</li>
+                <li>1 x w miesiącu</li>
+                <li>Tak, w każdej chwili</li>
+                <li>Miesięcznie</li>
+                <li>Ty i lektor</li>
+            </ul>
+        </div>
     </section>
 
     <footer>
