--- a/angielski.html
+++ b/angielski.html
@@ -22,46 +22,72 @@
 
     <section id="pricing-plans">
         <div class="plan">
-            <h3>Plan regularny</h3>
-            <p class="price">od 65,00 zł</p>
-            <p>za lekcję</p>
-            <button>Wypróbuj za darmo</button>
-            <ul>
-                <li>Stałe godziny zajęć</li>
-                <li>45 min lub 60 min</li>
-                <li>1 x w miesiącu</li>
-                <li>Tak (przy kursach regularnych po 4 msc. nauki)</li>
-                <li>Za cały kurs (możliwa płatność ratalna)</li>
-                <li>Ty i lektor</li>
-            </ul>
+            <div class="box plan-title">
+                <h3>Plan regularny</h3>
+            </div>
+            <div class="box plan-price">
+                <p class="price">od 65,00 zł</p>
+                <p>za lekcję</p>
+            </div>
+            <div class="box plan-button">
+                <button>Wypróbuj za darmo</button>
+            </div>
+            <div class="box plan-features">
+                <ul>
+                    <li>Stałe godziny zajęć</li>
+                    <li>45 min lub 60 min</li>
+                    <li>1 x w miesiącu</li>
+                    <li>Tak (przy kursach regularnych po 4 msc. nauki)</li>
+                    <li>Za cały kurs (możliwa płatność ratalna)</li>
+                    <li>Ty i lektor</li>
+                </ul>
+            </div>
         </div>
+
         <div class="plan">
-            <h3>Plan miesięczny</h3>
-            <p class="price">od 99,00 zł</p>
-            <p>za lekcję</p>
-            <button>Wypróbuj za darmo</button>
-            <ul>
-                <li>Stałe godziny zajęć</li>
-                <li>45 min lub 60 min</li>
-                <li>1 x w miesiącu</li>
-                <li>Tak, w każdej chwili</li>
-                <li>Miesięcznie</li>
-                <li>Ty i lektor</li>
-            </ul>
+            <div class="box plan-title">
+                <h3>Plan miesięczny</h3>
+            </div>
+            <div class="box plan-price">
+                <p class="price">od 99,00 zł</p>
+                <p>za lekcję</p>
+            </div>
+            <div class="box plan-button">
+                <button>Wypróbuj za darmo</button>
+            </div>
+            <div class="box plan-features">
+                <ul>
+                    <li>Stałe godziny zajęć</li>
+                    <li>45 min lub 60 min</li>
+                    <li>1 x w miesiącu</li>
+                    <li>Tak, w każdej chwili</li>
+                    <li>Miesięcznie</li>
+                    <li>Ty i lektor</li>
+                </ul>
+            </div>
         </div>
+
         <div class="plan">
-            <h3>Plan elastyczny</h3>
-            <p class="price">od 80,00 zł</p>
-            <p>za lekcję</p>
-            <button>Wypróbuj za darmo</button>
-            <ul>
-                <li>Ustalane na bieżąco lekcje</li>
-                <li>45 min lub 60 min</li>
-                <li>1 x w miesiącu</li>
-                <li>Tak, w każdej chwili</li>
-                <li>Miesięcznie</li>
-                <li>Ty i lektor</li>
-            </ul>
+            <div class="box plan-title">
+                <h3>Plan elastyczny</h3>
+            </div>
+            <div class="box plan-price">
+                <p class="price">od 80,00 zł</p>
+                <p>za lekcję</p>
+            </div>
+            <div class="box plan-button">
+                <button>Wypróbuj za darmo</button>
+            </div>
+            <div class="box plan-features">
+                <ul>
+                    <li>Ustalane na bieżąco lekcje</li>
+                    <li>45 min lub 60 min</li>
+                    <li>1 x w miesiącu</li>
+                    <li>Tak, w każdej chwili</li>
+                    <li>Miesięcznie</li>
+                    <li>Ty i lektor</li>
+                </ul>
+            </div>
         </div>
     </section>
 
