--- a/angielski.html
+++ b/angielski.html
@@ -23,10 +23,10 @@
     <section id="pricing-plans">
         <div class="plan">
             <div class="box plan-title">
-                <h3>Plan regularny</h3>
+                <h3>Lekcje Online Native Speaker standart</h3>
             </div>
             <div class="box plan-price">
-                <p class="price">od 65,00 zł</p>
+                <p class="price">od 33,00 zł</p>
                 <p>za lekcję</p>
             </div>
             <div class="box plan-button">
@@ -35,10 +35,10 @@
             <div class="box plan-features">
                 <ul>
                     <li>Stałe godziny zajęć</li>
-                    <li>45 min lub 60 min</li>
-                    <li>1 x w miesiącu</li>
-                    <li>Tak (przy kursach regularnych po 4 msc. nauki)</li>
-                    <li>Za cały kurs (możliwa płatność ratalna)</li>
+                    <li>25 min lub 55 min</li>
+                    <li>Stałe godziny zajęc (możliwość zmiany raz w miesiącu)</li>
+                    <li>Dostęp do korzyści Duolingo Premium</li>
+                    <li>Płatność miesięcznie</li>
                     <li>Ty i lektor</li>
                 </ul>
             </div>
@@ -46,10 +46,10 @@
 
         <div class="plan">
             <div class="box plan-title">
-                <h3>Plan miesięczny</h3>
+                <h3>Lekcje Online Native Speaker premium</h3>
             </div>
             <div class="box plan-price">
-                <p class="price">od 99,00 zł</p>
+                <p class="price">od 50,00 zł</p>
                 <p>za lekcję</p>
             </div>
             <div class="box plan-button">
@@ -58,10 +58,11 @@
             <div class="box plan-features">
                 <ul>
                     <li>Stałe godziny zajęć</li>
-                    <li>45 min lub 60 min</li>
-                    <li>1 x w miesiącu</li>
-                    <li>Tak, w każdej chwili</li>
-                    <li>Miesięcznie</li>
+                    <li>25 min lub 55 min</li>
+                    <li>Stałe godziny zajęc (możliwość zmiany raz w miesiącu)</li>
+                    <li>Dostęp do korzyści Duolingo Premium</li>
+                    <li>Udziałw w wydarzeniach językowych 1x w miesiącu</li>
+                    <li>Płatność miesięcznie</li>
                     <li>Ty i lektor</li>
                 </ul>
             </div>
@@ -69,10 +70,10 @@
 
         <div class="plan">
             <div class="box plan-title">
-                <h3>Plan elastyczny</h3>
+                <h3>Lekcje chatowe z Native Speaker</h3>
             </div>
             <div class="box plan-price">
-                <p class="price">od 80,00 zł</p>
+                <p class="price">od 30,00 zł</p>
                 <p>za lekcję</p>
             </div>
             <div class="box plan-button">
@@ -80,11 +81,11 @@
             </div>
             <div class="box plan-features">
                 <ul>
-                    <li>Ustalane na bieżąco lekcje</li>
-                    <li>45 min lub 60 min</li>
-                    <li>1 x w miesiącu</li>
-                    <li>Tak, w każdej chwili</li>
-                    <li>Miesięcznie</li>
+                    <li>Stałe godziny zajęć</li>
+                    <li>25 min lub 55 min</li>
+                    <li>Stałe godziny zajęc (możliwość zmiany raz w miesiącu)</li>
+                    <li>Dostęp do korzyści Duolingo Premium</li>
+                    <li>Płatność miesięcznie</li>
                     <li>Ty i lektor</li>
                 </ul>
             </div>
