--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Strona Główna</a></li>
-                <li><a href="angielski.html">Angielski</a></li>
+                <li><a href="angielski.html">Angielski/Cennik</a></li>
                 <li><a href="#">O Nas</a></li>
                 <li><a href="#">Kontakt</a></li>
             </ul>
