--- a/angielski.html
+++ b/angielski.html
@@ -13,8 +13,7 @@
             <ul>
                 <li><a href="index.html">Strona Główna</a></li>
                 <li><a href="angielski.html">Angielski/Cennik</a></li>
-                <li><a href="#">O Nas</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
