--- a/kontakt.html
+++ b/kontakt.html
@@ -13,3 +13,14 @@
     
     <button type="submit">Wyślij</button>
 </form>
+
+    <header>
+        <img src="logo.png" alt="Logo SpeakEdo" id="logo">
+        <nav>
+            <ul>
+                <li><a href="index.html">Strona Główna</a></li>
+                <li><a href="angielski.html">Angielski/Cennik</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+            </ul>
+        </nav>
+    </header>
