--- a/kontakt.html
+++ b/kontakt.html
@@ -14,6 +14,7 @@
     <button type="submit">Wyślij</button>
 </form>
 
+<body>
     <header>
         <img src="logo.png" alt="Logo SpeakEdo" id="logo">
         <nav>
@@ -24,3 +25,4 @@
             </ul>
         </nav>
     </header>
+</body>
