--- a/kontakt.html
+++ b/kontakt.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kurs Angielskiego - Plany - SpeakEdo</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link do Twojego pliku CSS -->
+</head>
+<body>
+    <header>
+        <img src="logo.png" alt="Logo SpeakEdo" id="logo">
+        <nav>
+            <ul>
+                <li><a href="index.html">Strona Główna</a></li>
+                <li><a href="angielski.html">Angielski/Cennik</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+            </ul>
+        </nav>
+    </header>
+    
 <form action="https://formspree.io/f/xblrbdbr" method="POST">
     <label for="name">Imię i nazwisko *</label>
     <input type="text" id="name" name="name" required>
@@ -13,16 +33,5 @@
     
     <button type="submit">Wyślij</button>
 </form>
-
-<body>
-    <header>
-        <img src="logo.png" alt="Logo SpeakEdo" id="logo">
-        <nav>
-            <ul>
-                <li><a href="index.html">Strona Główna</a></li>
-                <li><a href="angielski.html">Angielski/Cennik</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
 </body>
+</html>
