--- a/kontakt.html
+++ b/kontakt.html
@@ -22,10 +22,10 @@
 
     <div class="contact-container">
         <div class="contact-info">
-            <h2>Szkoła Językowa Edoo</h2>
+            <h2>Szkoła Językowa SpeakEdo</h2>
             <p>Uczymy języków online od 2007 roku.</p>
-            <p><strong>Telefon:</strong><br>(+48) 12 312 5326</p>
-            <p><strong>Edoo sp. z o.o.</strong><br> Michałowskiego 11/8<br> 31-126 Kraków, Polska</p>
+            <p><strong>Telefon:</strong><br>+48 793 303 668</p>
+            <p><strong>Email:</strong><br> speakedo.contact@gmail.com</p>
         </div>
 
         <div class="contact-form">
@@ -44,11 +44,6 @@
                 
                 <label for="message">Miejsce na komentarz</label>
                 <textarea id="message" name="message"></textarea>
-                
-                <div class="checkbox-container">
-                    <input type="checkbox" id="terms" name="terms" required>
-                    <label for="terms">Potwierdzam, że zapoznałem/am się i akceptuję regulamin strony internetowej oraz że zapoznałem/am się z polityką prywatności strony internetowej.</label>
-                </div>
 
                 <div class="checkbox-container">
                     <input type="checkbox" id="marketing-consent" name="marketing-consent">
