--- a/kontakt.html
+++ b/kontakt.html
@@ -23,7 +23,6 @@
     <div class="contact-container">
         <div class="contact-info">
             <h2>Szkoła Językowa SpeakEdo</h2>
-            <p>Uczymy języków online od 2007 roku.</p>
             <p><strong>Telefon:</strong><br>+48 793 303 668</p>
             <p><strong>Email:</strong><br> speakedo.contact@gmail.com</p>
         </div>
@@ -46,7 +45,7 @@
                 <textarea id="message" name="message"></textarea>
 
                 <div class="checkbox-container">
-                    <input type="checkbox" id="marketing-consent" name="marketing-consent">
+                    <input type="checkbox" id="marketing-consent" name="marketing-consent" required>
                     <label for="marketing-consent">Zgadzam się na przetwarzanie moich danych osobowych w celu przesyłania informacji marketingowych.</label>
                 </div>
                 
