--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <section id="course-section">
     <h2>Oferujemy:</h2>
     <div class="course-cards">
-        <a href="link_do_angielskiego" class="card">
+        <a href="https://micheasz12.github.io/speakedo/angielski.html" class="card">
             <img src="anglia.png" alt="Angielski">
             <p>Angielski</p>
         </a>
