--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         To doskonała okazja, by sprawdzić swoje umiejętności w praktyce, porozmawiać z innymi uczącymi się i czerpać wiedzę od różnych nauczycieli.
         Wybierz SpeakEdo i ucz się angielskiego w przyjaznej atmosferze z najlepszymi!
     </p>
-    <a href="#" class="cta-button">Wypróbuj za darmo</a>
+    <a href="kontakt.html" class="cta-button">Wypróbuj za darmo</a>
 </section>
 
 <section id="why-speakedo">
