--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <button class="slider-btn next">&#8250;</button>
     </div>
 </section>
-
+        
 <footer id="site-footer">
     <div class="footer-container">
         <div class="footer-column">
@@ -120,13 +120,13 @@
         <div class="footer-column">
             <h3>Kursy</h3>
             <ul>
-                <li>Angielski</li>
+                <li><a href="angielski.html">Angielski</a></li>
             </ul>
         </div>
         <div class="footer-column">
             <h3>Centrum pomocy</h3>
             <ul>
-                <li>Kontakt</li>
+                <li><a href="kontakt.html">Kontakt</a></li>
                 <li>Pytania</li>
             </ul>
         </div>
@@ -140,8 +140,7 @@
         </div>
     </div>
 </footer>
-
-        
+   
     </main>
 
     <footer>
