--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="footer-social">
         <p>Social Media</p>
         <div class="social-icons">
-            <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+            <a href="https://www.facebook.com/profile.php?id=61565350526006"><img src="facebook-icon.png" alt="Facebook"></a>
             <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
             <a href="#"><img src="tiktok-icon.png" alt="TikTok"></a>
         </div>
