--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
         <p>Social Media</p>
         <div class="social-icons">
             <a href="https://www.facebook.com/profile.php?id=61565350526006"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
-            <a href="#"><img src="tiktok-icon.png" alt="TikTok"></a>
+            <a href="https://www.instagram.com/speak.edo/"><img src="instagram-icon.png" alt="Instagram"></a>
         </div>
     </div>
 </footer>
