--- a/angielski.html
+++ b/angielski.html
@@ -90,8 +90,39 @@
         </div>
     </section>
 
+<footer id="site-footer">
+    <div class="footer-container">
+        <div class="footer-column">
+            <h3>Biuro Obsługi Klienta</h3>
+            <p>Masz pytania?</p>
+            <p>+48 793 303 668 (w dni robocze 9:00-17:00)</p>
+            <p>speakedo.contact@gmail.com</p>
+        </div>
+        <div class="footer-column">
+            <h3>Kursy</h3>
+            <ul>
+                <li><a href="angielski.html">Angielski</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h3>Centrum pomocy</h3>
+            <ul>
+                <li><a href="kontakt.html">Kontakt</a></li>
+                <li>Pytania</li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer-social">
+        <p>Social Media</p>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/profile.php?id=61565350526006"><img src="facebook-icon.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/speak.edo/"><img src="instagram-icon.png" alt="Instagram"></a>
+        </div>
+    </div>
+</footer>
+
     <footer>
-        <!-- Twój kod stopki -->
+        <p>© 2024 SpeakEdo. Wszelkie prawa zastrzeżone.</p>
     </footer>
 </body>
 </html>
