--- a/angielski.html
+++ b/angielski.html
@@ -18,6 +18,9 @@
         </nav>
     </header>
 
+     <!-- Dodany tytuł -->
+    <h2 style="text-align: center; font-weight: bold;">Wybierz swój pakiet lekcji angielskiego</h2>
+
     <section id="pricing-plans">
         <div class="plan">
             <div class="box plan-title">
