--- a/angielski.html
+++ b/angielski.html
@@ -19,7 +19,7 @@
     </header>
 
      <!-- Dodany tytuł -->
-    <h2 style="text-align: center; font-weight: bold;">Wybierz swój pakiet lekcji angielskiego</h2>
+    <h2 class="section-title">Wybierz swój pakiet lekcji angielskiego</h2>
 
     <section id="pricing-plans">
         <div class="plan">
