--- a/angielski.html
+++ b/angielski.html
@@ -31,7 +31,9 @@
                 <p>za lekcję</p>
             </div>
             <div class="box plan-button">
-                <button>Wypróbuj za darmo</button>
+                    <a href="kontakt.html">
+                        <button>Wypróbuj za darmo</button>
+                    </a>
             </div>
             <div class="box plan-features">
                 <ul>
@@ -54,7 +56,9 @@
                 <p>za lekcję</p>
             </div>
             <div class="box plan-button">
-                <button>Wypróbuj za darmo</button>
+                    <a href="kontakt.html">
+                        <button>Wypróbuj za darmo</button>
+                    </a>
             </div>
             <div class="box plan-features">
                 <ul>
@@ -78,7 +82,9 @@
                 <p>za lekcję</p>
             </div>
             <div class="box plan-button">
-                <button>Wypróbuj za darmo</button>
+                    <a href="kontakt.html">
+                        <button>Wypróbuj za darmo</button>
+                    </a>
             </div>
             <div class="box plan-features">
                 <ul>
