--- a/angielski.html
+++ b/angielski.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
 
-     <!-- Dodany tytuł -->
+    <!-- Dodany tytuł -->
     <h2 class="section-title">Wybierz swój pakiet lekcji angielskiego</h2>
 
     <section id="pricing-plans">
@@ -30,11 +30,10 @@
                 <p>za lekcję</p>
             </div>
             <div class="box plan-button">
-                    <a href="kontakt.html">
-                        <button>Wypróbuj za darmo</button>
-                    </a>
+                <a href="kontakt.html">
+                    <button>Wypróbuj za darmo</button>
+                </a>
             </div>
-            
             <div class="box plan-features">
                 <ul>
                     <li>Stałe godziny zajęć</li>
@@ -44,7 +43,8 @@
                     <li>Płatność miesięcznie</li>
                     <li>Ty i lektor</li>
                 </ul>
-            </div>
+            </div> <!-- Closing div for the first .plan -->
+        </div>
 
         <div class="plan">
             <div class="box plan-title">
@@ -55,9 +55,9 @@
                 <p>za lekcję</p>
             </div>
             <div class="box plan-button">
-                    <a href="kontakt.html">
-                        <button>Wypróbuj za darmo</button>
-                    </a>
+                <a href="kontakt.html">
+                    <button>Wypróbuj za darmo</button>
+                </a>
             </div>
             <div class="box plan-features">
                 <ul>
@@ -81,9 +81,9 @@
                 <p>za lekcję</p>
             </div>
             <div class="box plan-button">
-                    <a href="kontakt.html">
-                        <button>Wypróbuj za darmo</button>
-                    </a>
+                <a href="kontakt.html">
+                    <button>Wypróbuj za darmo</button>
+                </a>
             </div>
             <div class="box plan-features">
                 <ul>
@@ -98,36 +98,36 @@
         </div>
     </section>
 
-<footer id="site-footer">
-    <div class="footer-container">
-        <div class="footer-column">
-            <h3>Biuro Obsługi Klienta</h3>
-            <p>Masz pytania?</p>
-            <p>+48 793 303 668 (w dni robocze 9:00-17:00)</p>
-            <p>speakedo.contact@gmail.com</p>
+    <footer id="site-footer">
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3>Biuro Obsługi Klienta</h3>
+                <p>Masz pytania?</p>
+                <p>+48 793 303 668 (w dni robocze 9:00-17:00)</p>
+                <p>speakedo.contact@gmail.com</p>
+            </div>
+            <div class="footer-column">
+                <h3>Kursy</h3>
+                <ul>
+                    <li><a href="angielski.html">Angielski</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Centrum pomocy</h3>
+                <ul>
+                    <li><a href="kontakt.html">Kontakt</a></li>
+                    <li>Pytania</li>
+                </ul>
+            </div>
         </div>
-        <div class="footer-column">
-            <h3>Kursy</h3>
-            <ul>
-                <li><a href="angielski.html">Angielski</a></li>
-            </ul>
+        <div class="footer-social">
+            <p>Social Media</p>
+            <div class="social-icons">
+                <a href="https://www.facebook.com/profile.php?id=61565350526006"><img src="facebook-icon.png" alt="Facebook"></a>
+                <a href="https://www.instagram.com/speak.edo/"><img src="instagram-icon.png" alt="Instagram"></a>
+            </div>
         </div>
-        <div class="footer-column">
-            <h3>Centrum pomocy</h3>
-            <ul>
-                <li><a href="kontakt.html">Kontakt</a></li>
-                <li>Pytania</li>
-            </ul>
-        </div>
-    </div>
-    <div class="footer-social">
-        <p>Social Media</p>
-        <div class="social-icons">
-            <a href="https://www.facebook.com/profile.php?id=61565350526006"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="https://www.instagram.com/speak.edo/"><img src="instagram-icon.png" alt="Instagram"></a>
-        </div>
-    </div>
-</footer>
+    </footer>
 
     <footer>
         <p>© 2024 SpeakEdo. Wszelkie prawa zastrzeżone.</p>
