--- a/index.html
+++ b/index.html
@@ -86,22 +86,22 @@
         <button class="slider-btn prev">&#8249;</button>
         <div class="testimonial-container">
             <div class="testimonial">
-                <p>"Dostałam ofertę od GN Group! Prawie podwójne wynagrodzenie, przyjęłam ofertę jako Partner ds. Pozyskiwania Talentów! Dzięki za ogromną pomoc i wsparcie, Joe!" </p>
-                <p>Joe jest jednym z nauczycieli Native Speaker</p>
+                <p>"Dostałam ofertę od międzynarodowej firmy! Prawie podwójne wynagrodzenie, przyjęłam ofertę jako Partner ds. Pozyskiwania Talentów! Dzięki za ogromną pomoc i wsparcie SpeakEdo" </p>
+                <p></p>
                 <p>Anna</p>
             </div>
             <div class="testimonial">
                 <p>"Jeśli chodzi o lekcje to jestem bardzo mile zaskoczona.
-                   Pan Joe jest świetny! Bardzo wesoły, komunikatywny, podoba mi się sposób prowadzenia zajęć. Praktyczne rzeczy ale z poczuciem humoru."</p>
-                <p>Joe jest jednym z nauczycieli Native Speaker</p>
+                   nauczyciel jest świetny! Bardzo wesoły, komunikatywny, podoba mi się sposób prowadzenia zajęć. Praktyczne rzeczy ale z poczuciem humoru."</p>
+                <p></p>
                 <p>Kamila</p>
             </div>
             <div class="testimonial">
                 <p>"Po trzech miesiącach nauki mogę śmiało powiedzieć, że lekcje były doskonałe.
                    Nauczyciel skutecznie dostosowywał materiały do moich potrzeb, a praktyczne ćwiczenia były bardzo pomocne.
                    Jestem bardzo zadowolony z postępów i zdecydowanie polecam."</p>
-                <p>Jan</p>
                 <p></p>
+                <p>Jan</p>
             </div>
         </div>
         <button class="slider-btn next">&#8250;</button>
