--- a/kontakt.html
+++ b/kontakt.html
@@ -24,6 +24,8 @@
             <h2>Szkoła Językowa SpeakEdo</h2>
             <p><strong>Telefon:</strong><br>+48 793 303 668</p>
             <p><strong>Email:</strong><br> speakedo.contact@gmail.com</p>
+            <p>W razie zainteresowania zajęciami, prosimy o kontakt pod dany numer telefonu lub o wysłanie wiadomości na email.</p>
+            <p>Można również wypełnić formularz i czekać na wiadomość.</p>
         </div>
 
         <div class="contact-form">
