--- a/angielski.html
+++ b/angielski.html
@@ -23,7 +23,7 @@
     <section id="pricing-plans">
         <div class="plan">
             <div class="box plan-title">
-                <h3>Lekcje Online Native Speaker standart</h3>
+                <h3>Lekcje Online z Native Speaker</h3>
             </div>
             <div class="box plan-price">
                 <p class="price">od 33,00 zł</p>
