--- a/angielski.html
+++ b/angielski.html
@@ -18,7 +18,7 @@
     </header>
 
     <!-- Dodany tytuł -->
-    <h2 class="section-title">Wybierz swój pakiet lekcji angielskiego</h2>
+    <h2 class="section-title" style="margin-top: 60px;">Wybierz swój pakiet lekcji angielskiego</h2>
 
     <section id="pricing-plans">
         <div class="plan">
