--- a/angielski.html
+++ b/angielski.html
@@ -19,6 +19,10 @@
 
     <!-- Dodany tytuł -->
     <h2 class="section-title" style="margin-top: 120px;">Wybierz swój pakiet lekcji angielskiego</h2>
+    <h3 class="subtitle">Wybierz swój pakiet lekcji angielskiego z Speakedo! Oferujemy zajęcia z najlepszymi nauczycielami native speakerami w atrakcyjnej cenie.
+        Możesz uczyć się online przez Skype, ciesząc się bezpośrednią interakcją, lub skorzystać z lekcji przez chat,
+        idealnych dla tych, którzy preferują mniej bezpośredni kontakt.
+        Z Speakedo nauka angielskiego staje się łatwa i przyjemna!</h3>
 
     <section id="pricing-plans">
         <div class="plan">
