--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section id="hero">
             <div class="hero-content">
                 <h1>Ucz się języków razem z nami!</h1>
-                <p>Efektywna, oryginalna i przyjemna nauka dla każdego</p>
+                <p>Efektywna i przyjemna nauka dla każdego</p>
                 <a href="angielski.html" class="cta-button">Sprawdź oferte</a>
         </div>
             <div class="hero-image">
