--- a/angielski.html
+++ b/angielski.html
@@ -18,8 +18,8 @@
     </header>
 
     <!-- Dodany tytuł -->
-    <h2 class="section-title" style="margin-top: 120px;">Wybierz swój pakiet lekcji angielskiego</h2>
-    <h3 class="subtitle" style="font-size: 1.5em; color: #333; margin-top: 10px; margin-bottom: 30px; text-align: center;">Wybierz swój pakiet lekcji angielskiego z Speakedo! Oferujemy zajęcia z najlepszymi nauczycielami native speakerami w atrakcyjnej cenie.
+    <h2 class="section-title" style="margin-top: 60px; text-align: center;">Wybierz swój pakiet lekcji angielskiego</h2>
+    <h3 class="subtitle" style="font-size: 1.2em; color: #333; margin-top: 10px; margin-bottom: 30px; text-align: center; padding: 0 20px;">Wybierz swój pakiet lekcji angielskiego z Speakedo! Oferujemy zajęcia z najlepszymi nauczycielami native speakerami w atrakcyjnej cenie.
         Możesz uczyć się online przez Skype, ciesząc się bezpośrednią interakcją, lub skorzystać z lekcji przez chat,
         idealnych dla tych, którzy preferują mniej bezpośredni kontakt.
         Z Speakedo nauka angielskiego staje się łatwa i przyjemna!</h3>
