--- a/index.html
+++ b/index.html
@@ -47,26 +47,30 @@
 
 <section id="why-speakedo">
     <h2>O nas</h2>
-    <p>SpeakEdo to szkoła językowa, która stawia na jakość nauki i przystępność cen. Nasze lekcje prowadzone są przez doświadczonych nauczycieli, którzy z pasją przekazują wiedzę, dbając o każdy szczegół.
-        Dzięki nam nauczysz się nie tylko słówek, ale przede wszystkim swobodnej komunikacji. Wystarczy dostęp do internetu, a już po kilku minutach dziennie zaczniesz widzieć postępy.
-        Z nami masz pewność, że nauka jest efektywna i przyjemna. Dołącz do SpeakEdo i odkryj, jak łatwo i szybko możesz osiągnąć swoje językowe cele!</p>
     <div class="features-container">
         <div class="feature">
-            <h3>Oferta dopasowana do każdego</h3>
-            <p>W SpeakEdo oferujemy różnorodne rodzaje lekcji, aby każdy mógł znaleźć coś idealnie dopasowanego do swoich potrzeb.
-               Czy wolisz zajęcia online z wideo i dźwiękiem, czy lekcje tekstowe – mamy coś dla Ciebie! Dodatkowo, nasze lekcje są dostosowywane tak, aby jak najlepiej odpowiadały Twoim oczekiwaniom i stylowi nauki.
-               Zależy nam na Twoim sukcesie, dlatego robimy wszystko, abyś był w pełni zadowolony z każdej chwili spędzonej na nauce z nami.</p>
+            <h3>Indywidualne lekcje angielskiego</h3>
+            <p>Oferujemy spersonalizowane lekcje angielskiego, dopasowane do Twoich celów i potrzeb.</p>
         </div>
         <div class="feature">
-            <h3>Dostęp do duolingo premium</h3>
-            <p>Oprócz naszych lekcji dajemy również dostęp do Duolingo Premium!
-                Dzięki temu możesz cieszyć się nieograniczoną ilością serc, brakiem reklam i innymi korzyściami, a to wszystko dzięki stworzeniu wspólnej klasy w Duolingo.</p>
+            <h3>Gwarancja satysfakcji</h3>
+            <p>Jeśli po miesiącu nauki nie zobaczysz żadnych postępów, zwrócimy Ci pieniądze.</p>
         </div>
         <div class="feature">
-            <h3>Lekcje dla każdego</h3>
-            <p>W SpeakEdo nasze lekcje są dostosowane do osób w każdym wieku – od dzieci i młodzieży po dorosłych i seniorów.
-               Niezależnie od tego, czy uczysz się dla przyjemności, czy przygotowujesz się do ważnych egzaminów, takich jak ósmoklasista, matura czy certyfikaty językowe, nasze zajęcia są tu, aby Ci pomóc.
-               Każdy znajdzie coś dla siebie, a my zadbamy o to, aby Twoje potrzeby edukacyjne były w pełni zaspokojone.</p>
+            <h3>Darmowa lekcja próbna</h3>
+            <p>Możesz skorzystać z bezpłatnej lekcji próbnej, aby sprawdzić, czy nasze zajęcia są dla Ciebie.</p>
+        </div>
+        <div class="feature">
+            <h3>Duolingo Premium</h3>
+            <p>Zyskasz dostęp do Duolingo Premium, aby codziennie ćwiczyć angielski za darmo.</p>
+        </div>
+        <div class="feature">
+            <h3>Darmowe e-booki</h3>
+            <p>Otrzymasz autorskie e-booki, które wspomogą Cię w nauce angielskiego.</p>
+        </div>
+        <div class="feature">
+            <h3>Cotygodniowe "Let’s Talk"</h3>
+            <p>Będziesz uczestniczyć w luźnych rozmowach z nauczycielami i małą grupą uczniów, co dodatkowo pomoże w nauce.</p>
         </div>
     </div>
 </section>
