--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
         </a>
     </div>
     <p class="course-description">
-        W SpeakEdo uczysz się z najlepszymi nauczycielami, którzy są native speakerami z dużym doświadczeniem w pracy z polskimi uczniami.
-        Nasi lektorzy są cierpliwi, wyrozumiali i dbają o Twój komfort podczas nauki.
-        Dzięki temu zdobywasz wiedzę bez stresu, a rezultaty są imponujące.
-        Wybierz SpeakEdo i ucz się angielskiego w przyjaznej atmosferze z najlepszymi!
+    Speakedo to nowoczesna, stale rozwijająca się szkółka językowa, która na ten moment oferuje kursy wyłącznie z języka angielskiego. Dzięki temu nasza uwaga jest w 100% skupiona na jego nauczaniu, co pozwoliło nam stworzyć efektywną metodę, gwarantującą szybkie postępy. Sprawdź sekcję "O nas" i zobacz, dlaczego warto uczyć się z nami!
     </p>
     <a href="kontakt.html" class="cta-button">Wypróbuj za darmo</a>
 </section>
