--- a/angielski.html
+++ b/angielski.html
@@ -19,7 +19,7 @@
 
     <!-- Dodany tytuł -->
     <h2 class="section-title" style="margin-top: 60px; text-align: center;">Wybierz swój pakiet lekcji angielskiego</h2>
-    <h3 class="subtitle" style="font-size: 1.2em; color: #000; margin-top: 10px; margin-bottom: 30px; text-align: center; padding: 0 20px;">Wybierz swój pakiet lekcji angielskiego z Speakedo! Oferujemy zajęcia z najlepszymi nauczycielami native speakerami w atrakcyjnej cenie.
+    <h3 class="subtitle" style="font-size: 1.2em; color: #000; margin-top: 10px; margin-bottom: 30px; text-align: center; padding: 0 20px; ext-decoration: none;">Wybierz swój pakiet lekcji angielskiego z Speakedo! Oferujemy zajęcia z najlepszymi nauczycielami native speakerami w atrakcyjnej cenie.
         Możesz uczyć się online przez Skype, ciesząc się bezpośrednią interakcją, lub skorzystać z lekcji przez chat,
         idealnych dla tych, którzy preferują mniej bezpośredni kontakt.
         Z Speakedo nauka angielskiego staje się łatwa i przyjemna!</h3>
