--- a/angielski.html
+++ b/angielski.html
@@ -17,12 +17,18 @@
         </nav>
     </header>
 
-    <!-- Dodany tytuł -->
-    <h2 class="section-title" style="margin-top: 60px; text-align: center;">Wybierz swój pakiet lekcji angielskiego</h2>
-    <h3 class="subtitle" style="font-size: 1.2em; color: #000; margin-top: 10px; margin-bottom: 30px; text-align: center; padding: 0 20px; ext-decoration: none;">Wybierz swój pakiet lekcji angielskiego z Speakedo! Oferujemy zajęcia z najlepszymi nauczycielami native speakerami w atrakcyjnej cenie.
-        Możesz uczyć się online przez Skype, ciesząc się bezpośrednią interakcją, lub skorzystać z lekcji przez chat,
-        idealnych dla tych, którzy preferują mniej bezpośredni kontakt.
-        Z Speakedo nauka angielskiego staje się łatwa i przyjemna!</h3>
+    <section id="infocennik">
+    <h2>O nas</h2>
+    <div class="features-container">
+        <div class="infocen">
+            <h3>Wybierz swój pakiet lekcji angielskiego</h3>
+            <p>Wybierz swój pakiet lekcji angielskiego z Speakedo! Oferujemy zajęcia z najlepszymi nauczycielami native speakerami w atrakcyjnej cenie.
+                Możesz uczyć się online przez Skype, ciesząc się bezpośrednią interakcją, lub skorzystać z lekcji przez chat,
+                idealnych dla tych, którzy preferują mniej bezpośredni kontakt.
+                Z Speakedo nauka angielskiego staje się łatwa i przyjemna!</p>
+        </div>
+    </div>
+</section>
 
     <section id="pricing-plans">
         <div class="plan">
