--- a/angielski.html
+++ b/angielski.html
@@ -19,7 +19,7 @@
 
     <section id="infocennik">
     <h2>O nas</h2>
-    <div class="features-container">
+    <div class="infoceny">
         <div class="infocen">
             <h3>Wybierz swój pakiet lekcji angielskiego</h3>
             <p>Wybierz swój pakiet lekcji angielskiego z Speakedo! Oferujemy zajęcia z najlepszymi nauczycielami native speakerami w atrakcyjnej cenie.
