--- a/angielski.html
+++ b/angielski.html
@@ -35,8 +35,8 @@
                 <h3>Lekcje Online z Native Speaker</h3>
             </div>
             <div class="box plan-price">
-                <p class="price">od 33,00 zł</p>
-                <p>za lekcję</p>
+                <p class="price">40 zł</p>
+                <p>za 55 minut</p>
             </div>
             <div class="box plan-button">
                 <a href="kontakt.html">
@@ -45,11 +45,12 @@
             </div>
             <div class="box plan-features">
                 <ul>
-                    <li>Stałe godziny zajęć</li>
                     <li>25 min lub 55 min</li>
                     <li>Stałe godziny zajęc (możliwość zmiany raz w miesiącu)</li>
                     <li>Dostęp do korzyści Duolingo Premium</li>
+                    <li>Dostęp do darmowych ebooków</li>
                     <li>Płatność miesięcznie</li>
+                    <li>Co tygodniowe darmowe let's talk</li>
                     <li>Ty i lektor</li>
                 </ul>
             </div> <!-- Closing div for the first .plan -->
@@ -60,8 +61,8 @@
                 <h3>Lekcje chatowe z Native Speaker</h3>
             </div>
             <div class="box plan-price">
-                <p class="price">od 30,00 zł</p>
-                <p>za lekcję</p>
+                <p class="price">30 zł</p>
+                <p>za 55 minut</p>
             </div>
             <div class="box plan-button">
                 <a href="kontakt.html">
@@ -70,11 +71,12 @@
             </div>
             <div class="box plan-features">
                 <ul>
-                    <li>Stałe godziny zajęć</li>
                     <li>25 min lub 55 min</li>
                     <li>Stałe godziny zajęc (możliwość zmiany raz w miesiącu)</li>
                     <li>Dostęp do korzyści Duolingo Premium</li>
+                    <li>Dostęp do darmowych ebooków</li>
                     <li>Płatność miesięcznie</li>
+                    <li>Co tygodniowe darmowe let's talk</li>
                     <li>Ty i lektor</li>
                 </ul>
             </div>
