--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="feature">
             <h3>Gwarancja satysfakcji</h3>
-            <p>Jeśli po miesiącu nauki nie zobaczysz żadnych postępów, zwrócimy Ci pieniądze.</p>
+            <p>Wierzymy w efektywność naszych lekcji! Nasi nauczyciele są zawsze gotowi, aby Cię wspierać i motywować na każdym etapie nauki.</p>
         </div>
         <div class="feature">
             <h3>Darmowa lekcja próbna</h3>
